fix(TimePicker): add scrolling for overflowing value

--- a/packages/components/src/components/FormField/FormFieldInputDate/FormFieldInputDate.module.css
+++ b/packages/components/src/components/FormField/FormFieldInputDate/FormFieldInputDate.module.css
@@ -18,6 +18,8 @@
     background-color var(--kbq-transition-default);
 
   @mixin typography text-normal;
+  scrollbar-width: none;
+  overflow-x: auto;
 }
 
 .base[aria-disabled='true'] {
